chore: large update, see changelog
